[package]
name = "math-jit"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kamirr/math-jit"
description = "Compile arithmetic expressions to native code"

[[example]]
name = "run"

[dependencies]
cranelift = { version = "0.116.1", features = ["jit", "module"] }
cranelift-codegen = "0.116.1"
cranelift-native = "0.116.1"
log = "0.4.25"
meval = "0.2.0"
thiserror = "2.0.11"

[dev-dependencies]
env_logger = "0.11.6"
